tests/phpt/parse_errors/fail_string_indexing.php
@kphp_should_fail
/Expected '\)', found '\['/
/Failed to parse statement. Expected `;`/
<?php

$x = 'a';
var_dump("$x"[0]); // forbidden in PHP as well
